--- a/sentry-android-core/src/main/AndroidManifest.xml
+++ b/sentry-android-core/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="io.sentry.android"
+<manifest package="io.sentry.android.core"
           xmlns:android="http://schemas.android.com/apk/res/android">
   <application>
     <!-- 'android:authorities' must be unique in the device, across all apps -->
     <provider
-      android:name="io.sentry.android.SentryInitProvider"
+      android:name="io.sentry.android.core.SentryInitProvider"
       android:authorities="${applicationId}.SentryInitProvider"
       android:exported="false"
       android:initOrder="2147483647" />
