--- a/sentry-android-core/src/main/AndroidManifest.xml
+++ b/sentry-android-core/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
     <provider
       android:name=".SentryInitProvider"
       android:authorities="${applicationId}.SentryInitProvider"
-      android:exported="false"
-      android:initOrder="2147483647" />
+      android:exported="false" />
   </application>
 </manifest>
