--- a/sentry-android-ndk/CMakeLists.txt
+++ b/sentry-android-ndk/CMakeLists.txt
@@ -10,7 +10,7 @@ include_directories("sentry-native/include")
 # sentry-native source code.
 file(GLOB SENTRY_ANDROID_SOURCES ${CMAKE_SOURCE_DIR}/src/main/jni/*.c)
 
-# Adding dynamic library and linking it with log and NDCrash.
+# Adding dynamic library and linking it with log and sentry-native.
 add_library("sentry-android" SHARED ${SENTRY_ANDROID_SOURCES})
 find_library(LOG_LIB log)
 target_link_libraries("sentry-android" "sentry" ${LOG_LIB})
