--- a/sentry-android-ndk/src/main/AndroidManifest.xml
+++ b/sentry-android-ndk/src/main/AndroidManifest.xml
@@ -1,2 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="io.sentry.android.ndk" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          package="io.sentry.android.ndk">
+  <application>
+    <meta-data android:name="io.sentry.ndk" android:value="true"/>
+  </application>
+</manifest>
