--- a/sentry-sample/src/main/AndroidManifest.xml
+++ b/sentry-sample/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
 
     <meta-data android:name="io.sentry.dsn" android:value="https://key@sentry.io/123" />
     <meta-data android:name="io.sentry.debug" android:value="true" />
+
 <!--    <meta-data android:name="io.sentry.auto-init" android:value="false" /> // how to disable the auto-init-->
+
+<!--    <meta-data android:name="io.sentry.ndk" android:value="false" /> // how to disable the NDK-->
+<!--               tools:node="remove" />-->
   </application>
 </manifest>
