--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,10 @@
 # Daemon’s heap size
-org.gradle.jvmargs=-Xms1g -Xmx1g -XX:MaxPermSize=512m -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xms1g -Dkotlin.daemon.jvm.options\="-Xmx1536M" -Xmx1536M -XX\:MaxPermSize\=512m -Dfile.encoding\=UTF-8
+
+# Cacheable unit tests
+android.testConfig.useRelativePath=true
 
 # Parallel execution
 org.gradle.parallel=true
 
-# Cacheable unit tests
-android.testConfig.useRelativePath = true
+android.useAndroidX=true
