set androidx/jetifier for AGP 3.6.x

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,12 @@
 # Daemon’s heap size
 org.gradle.jvmargs=-Xms1g -Dkotlin.daemon.jvm.options\="-Xmx1536M" -Xmx1536M -XX\:MaxPermSize\=512m -Dfile.encoding\=UTF-8
 
-# Cacheable unit tests
-android.testConfig.useRelativePath=true
-
 # Parallel execution
 org.gradle.parallel=true
 
+# Cacheable unit tests
+android.testConfig.useRelativePath = true
+
+# Migrating to AndroidX - AGP 3.6.x
 android.useAndroidX=true
+android.enableJetifier=true
