--- a/sentry-sample/src/main/AndroidManifest.xml
+++ b/sentry-sample/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
       </intent-filter>
     </activity>
 
-    <meta-data android:name="io.sentry.dsn" android:value="https://key@sentry.io/123" />
+    <meta-data android:name="io.sentry.dsn" android:value="https://46fee3fb0e2a45cca85f2f2c41efe52c@sentry.io/1379099" />
     <meta-data android:name="io.sentry.debug" android:value="true" />
 
 <!--    <meta-data android:name="io.sentry.auto-init" android:value="false" /> // how to disable the auto-init-->
