--- a/sentry-sample/src/main/AndroidManifest.xml
+++ b/sentry-sample/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="io.sentry.sample">
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
   <application
     android:name=".MyApplication"
     android:allowBackup="false"
