--- a/sentry-sample/src/main/AndroidManifest.xml
+++ b/sentry-sample/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
     <!--  NOTE: Replace the test DSN below with YOUR OWN DSN to see the events from this app in your Sentry project/dashboard -->
     <meta-data android:name="io.sentry.dsn" android:value="https://f7f320d5c3a54709be7b28e0f2ca7081@sentry.io/1808954" />
     <meta-data android:name="io.sentry.debug" android:value="true" />
+    <!-- Raise a ANR event if UI thread blocked for over 1 seconds -->
+    <meta-data android:name="io.sentry.anr.timeout-interval-mills" android:value="1000" />
 
 <!--    <meta-data android:name="io.sentry.auto-init" android:value="false" /> // how to disable the auto-init-->
 
