--- a/sentry-sample/src/main/AndroidManifest.xml
+++ b/sentry-sample/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
     <meta-data android:name="io.sentry.anr.timeout-interval-mills" android:value="2000" />
 
     <!-- Raise ANR events even if the debugger is attached -->
-    <meta-data android:name="io.sentry.anr.report-debug" android:value="false" />
+<!--    <meta-data android:name="io.sentry.anr.report-debug" android:value="true" />-->
 
 <!--    how to disable the auto-init-->
 <!--    <meta-data android:name="io.sentry.auto-init" android:value="false" />-->
