--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ licenses:
 before_install:
   - touch $HOME/.android/repositories.cfg
   - yes | sdkmanager --update
+install:
+  - echo y | sdkmanager "ndk-bundle"
+  - echo y | sdkmanager "cmake;3.6.4111459"
 android:
   components:
     - platform-tools
