--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ android.testConfig.useRelativePath = true
 
 # Migrating to AndroidX - AGP 3.6.x
 android.useAndroidX=true
-android.enableJetifier=true
+#android.enableJetifier=true - causing SHA1 digest error
 
 # New default packaging tool, disabled as its still preview
 android.useNewApkCreator=false
