--- a/sentry-sample/src/main/AndroidManifest.xml
+++ b/sentry-sample/src/main/AndroidManifest.xml
@@ -34,12 +34,15 @@
     <meta-data android:name="io.sentry.anr.timeout-interval-mills" android:value="4000" />
 
     <!-- Raise ANR events even if the debugger is attached -->
-    <meta-data android:name="io.sentry.anr.report-debug" android:value="true" />
+<!--    <meta-data android:name="io.sentry.anr.report-debug" android:value="true" />-->
+
+<!--    how to disable ANR-->
+<!--    <meta-data android:name="io.sentry.anr.enable" android:value="false" />-->
 
 <!--    how to disable the auto-init-->
 <!--    <meta-data android:name="io.sentry.auto-init" android:value="false" />-->
 
 <!--    how to disable the NDK-->
-<!--    <meta-data android:name="io.sentry.ndk" android:value="false" />-->
+<!--    <meta-data android:name="io.sentry.ndk.enable" android:value="false" />-->
   </application>
 </manifest>
