--- a/sentry-sample/src/main/AndroidManifest.xml
+++ b/sentry-sample/src/main/AndroidManifest.xml
@@ -28,9 +28,10 @@
     <!--  NOTE: Replace the test DSN below with YOUR OWN DSN to see the events from this app in your Sentry project/dashboard -->
     <meta-data android:name="io.sentry.dsn" android:value="https://f7f320d5c3a54709be7b28e0f2ca7081@sentry.io/1808954" />
 
+<!--    how to enable Sentry's debug mode-->
     <meta-data android:name="io.sentry.debug" android:value="true" />
 
-    <!-- To change the time used to watch for ANR. By default it's 5 seconds (5000 below as it's in milliseconds) -->
+    <!-- To change the time used to watch for ANR. By default it's 4 seconds (4000 below as it's in milliseconds) -->
     <meta-data android:name="io.sentry.anr.timeout-interval-mills" android:value="1000" />
 
     <!-- Raise ANR events even if the debugger is attached -->
