--- a/sentry-sample/CMakeLists.txt
+++ b/sentry-sample/CMakeLists.txt
@@ -4,3 +4,5 @@ project("sentry-android-sample")
 add_library(native-sample SHARED src/main/cpp/native-sample.cpp)
 find_library(LOG_LIB log)
 target_link_libraries(native-sample ${LOG_LIB})
+include (${ANDROID_GRADLE_NATIVE_BUNDLE_PLUGIN_MK})
+target_link_libraries(native-sample ${ANDROID_GRADLE_NATIVE_MODULES})
