enable r8 full mode for testing

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,6 @@ org.gradle.parallel=true
 
 # Cacheable unit tests
 android.testConfig.useRelativePath = true
+
+# Enable more aggressive optimizations
+android.enableR8.fullMode=true
