sample maven central sync

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,9 @@ org.gradle.parallel=true
 
 # Gradle will try to reuse outputs from previous builds for all builds
 org.gradle.caching=true
+
+# Use AndroidX libs
+android.useAndroidX=true
+
+# Disable new default packaging tool till get stable
+android.useNewApkCreator=false
