--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -4,7 +4,7 @@ environment:
   ANDROID_HOME: "C:\\android-sdk-windows"
   ANDROID_NDK_HOME: "C:\\android-sdk-windows\\ndk-bundle"
   ANDROID_BUILD_VERSION: 29
-  ANDROID_TOOLS_VERSION: 29.0.2
+  ANDROID_TOOLS_VERSION: 29.0.3
   GRADLE_OPTS: -Dorg.gradle.daemon=false
   SDK_TOOLS_URL: https://dl.google.com/android/repository/sdk-tools-windows-4333796.zip
 install:
@@ -23,6 +23,7 @@ build_script:
 artifacts:
   - path: '**\libs\*sentry*.jar'
   - path: '**\outputs\aar\*sentry*.aar'
+  - path: '**\outputs\aar\*sentry*.pom'
 on_finish:
   - ps: |
       $wc = New-Object 'System.Net.WebClient'
