--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -5,16 +5,19 @@ environment:
   ANDROID_NDK_HOME: "C:\\android-sdk-windows\\ndk-bundle"
   ANDROID_BUILD_VERSION: 29
   ANDROID_TOOLS_VERSION: 29.0.3
+  ANDROID_NDK_VERSION: 20.0.5594570
+  ANDROID_CMAKE_VERSION: 3.10.2.4988404
   GRADLE_OPTS: -Dorg.gradle.daemon=false
   SDK_TOOLS_URL: https://dl.google.com/android/repository/sdk-tools-windows-4333796.zip
 install:
   - mkdir "%ANDROID_HOME%"
-  - appveyor DownloadFile "%SDK_TOOLS_URL%" -FileName "%TMP%/sdk-tools.zip"
-  - 7z x "%TMP%/sdk-tools.zip" -o"%ANDROID_HOME%" > nul
+  - appveyor DownloadFile "%SDK_TOOLS_URL%" -FileName "%TMP%\\sdk-tools.zip"
+  - 7z x "%TMP%\\sdk-tools.zip" -o "%ANDROID_HOME%" > nul
   - set PATH=%PATH%;"%ANDROID_HOME%\tools\bin"
   - yes 2> nul | sdkmanager --licenses > nul
-  - yes 2> nul | sdkmanager "platform-tools" "platforms;android-%ANDROID_BUILD_VERSION%"
-  - yes 2> nul | sdkmanager --install "ndk;20.0.5594570"
+  - yes 2> nul | sdkmanager "platform-tools" "platforms;android-%ANDROID_BUILD_VERSION%" > nul
+  - yes 2> nul | sdkmanager "ndk;%ANDROID_NDK_VERSION%" > nul
+  - yes 2> nul | sdkmanager "cmake;%ANDROID_CMAKE_VERSION%" > nul
 cache:
   - "%USERPROFILE%\\.gradle\\caches"
   - "%USERPROFILE%\\.gradle\\wrapper"
