--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -11,7 +11,7 @@ environment:
   SDK_TOOLS_URL: https://dl.google.com/android/repository/sdk-tools-windows-4333796.zip
 install:
   - mkdir "%ANDROID_HOME%"
-  - appveyor DownloadFile "%SDK_TOOLS_URL%" -FileName "%TMP%\\sdk-tools.zip"
+  - appveyor DownloadFile "%SDK_TOOLS_URL%" -FileName "%TMP%/sdk-tools.zip"
   - 7z x "%TMP%\\sdk-tools.zip" -o "%ANDROID_HOME%" > nul
   - set PATH=%PATH%;"%ANDROID_HOME%\tools\bin"
   - yes 2> nul | sdkmanager --licenses > nul
