disable autoPublish and read variables from properties file

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,3 +9,7 @@ org.gradle.caching=true
 
 # AndroidX required by AGP 3.6.x
 android.useAndroidX=true
+
+# Release information
+buildVersionCode=20017
+versionName=2.0.2-SNAPSHOT
