--- a/sentry-sample/src/main/AndroidManifest.xml
+++ b/sentry-sample/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
     </activity>
 
     <!--  NOTE: Replace the test DSN below with YOUR OWN DSN to see the events from this app in your Sentry project/dashboard -->
-    <meta-data android:name="io.sentry.dsn" android:value="https://f7f320d5c3a54709be7b28e0f2ca7081@sentry.io/1808954" />
+    <meta-data android:name="io.sentry.dsn" android:value="http://1511aad18ebc4bc1a30fa8291a884314@localhost:8000/1" />
 
 <!--    how to enable Sentry's debug mode-->
     <meta-data android:name="io.sentry.debug" android:value="true" />
@@ -48,5 +48,7 @@
 
 <!--    how to disable the NDK-->
 <!--    <meta-data android:name="io.sentry.ndk.enable" android:value="false" />-->
+
+    <meta-data android:name="io.sentry.release" android:value="io.sentry.android@1.0+1" />
   </application>
 </manifest>
