--- a/sentry-sample/src/main/AndroidManifest.xml
+++ b/sentry-sample/src/main/AndroidManifest.xml
@@ -53,5 +53,6 @@
 <!--    <meta-data android:name="io.sentry.ndk.enable" android:value="false" />-->
 
     <meta-data android:name="io.sentry.release" android:value="io.sentry.android@1.0+1" />
+    <meta-data android:name="io.sentry.session-tracking.enable" android:value="true" />
   </application>
 </manifest>
