added timer task that ends session after default interval period when app goes to background

--- a/sentry-sample/src/main/AndroidManifest.xml
+++ b/sentry-sample/src/main/AndroidManifest.xml
@@ -56,5 +56,6 @@
     <meta-data android:name="io.sentry.release" android:value="io.sentry.android@2.0.2+20018" />
     <meta-data android:name="io.sentry.session-tracking.enable" android:value="true" />
     <meta-data android:name="io.sentry.environment" android:value="debug" />
+    <meta-data android:name="io.sentry.session-tracking.timeout-interval-millis" android:value="20000" />
   </application>
 </manifest>
