--- a/sentry-sample/src/main/AndroidManifest.xml
+++ b/sentry-sample/src/main/AndroidManifest.xml
@@ -58,6 +58,9 @@
 <!--    how to enable session tracking-->
     <meta-data android:name="io.sentry.session-tracking.enable" android:value="true" />
 
+<!--    how to disable auto session tracking-->
+    <meta-data android:name="io.sentry.session-tracking.auto.enable" android:value="false" />
+
 <!--    how to set an environment-->
 <!--    <meta-data android:name="io.sentry.environment" android:value="debug" />-->
 
