--- a/sentry-sample/src/main/AndroidManifest.xml
+++ b/sentry-sample/src/main/AndroidManifest.xml
@@ -47,7 +47,7 @@
 <!--    <meta-data android:name="io.sentry.anr.enable" android:value="false" />-->
 
 <!--    how to disable the auto-init-->
-<!--    <meta-data android:name="io.sentry.auto-init" android:value="false" />-->
+<!--    <meta-data android:name="io.sentry.auto-init" android:value="true" />-->
 
 <!--    how to disable the NDK-->
 <!--    <meta-data android:name="io.sentry.ndk.enable" android:value="false" />-->
@@ -66,6 +66,12 @@
 
 <!--    how to enable and set a sampleRate (anything between 0.01 and 1.0), it's disabled by default-->
 <!--    <meta-data android:name="io.sentry.sample-rate" android:value="0.5" />-->
+
+<!--    how to enable secure android id retro compatibility-->
+    <meta-data android:name="io.sentry.secure-android-id.enable" android:value="true" />
+
+<!--    how to enable caching users for sessions-->
+    <meta-data android:name="io.sentry.session-tracking.cache-user.enable" android:value="true" />
 
   </application>
 </manifest>
