--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -23,7 +23,7 @@ cache:
   - "%USERPROFILE%\\.gradle\\wrapper"
   - "%USERPROFILE%\\.m2\\repository"
 build_script:
-  - cmd: make all
+  - cmd: gradlew.bat clean cleanBuildCache build bintrayUpload -PbintrayUser=dryUser -PbintrayKey=dryKey
 artifacts:
   - path: '**\libs\*sentry*.jar'
   - path: '**\outputs\aar\*sentry*release*.aar'
