use AGP 4 features

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,14 @@ android.useAndroidX=true
 # Release information
 buildVersionCode=20023
 versionName=2.1.0-beta.3-SNAPSHOT
+
+# disable renderscript, it's enabled by default
+android.defaults.buildfeatures.renderscript=false
+
+# disable shader compilation, it's enabled by default
+android.defaults.buildfeatures.shaders=false
+
+# disable aidl files, it's enabled by default
+android.defaults.buildfeatures.aidl=false
+
+android.prefabVersion=1.0.0
