--- a/gradle.properties
+++ b/gradle.properties
@@ -20,4 +20,6 @@ android.defaults.buildfeatures.shaders=false
 # disable aidl files, it's enabled by default
 android.defaults.buildfeatures.aidl=false
 
-android.prefabVersion=1.0.0
+# TODO: Enable Prefab https://android-developers.googleblog.com/2020/02/native-dependencies-in-android-studio-40.html
+# android.enablePrefab=true
+# android.prefabVersion=1.0.0
