--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   build:
+    name: ${{ matrix.config.name }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -19,5 +20,9 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+    
+    - name: Install NDK
+      run: echo "y" | sudo /usr/local/lib/android/sdk/tools/bin/sdkmanager --install "ndk;20.0.5594570" --sdk_root=${ANDROID_SDK_ROOT}
+
     - name: Build with Gradle
       run: ./gradlew build
