--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -17,8 +17,13 @@ jobs:
         with:
           java-version: 1.8
 
+#      - name: Install NDK
+#        run: echo "y" | sudo /usr/local/lib/android/sdk/tools/bin/sdkmanager --install "ndk;20.0.5594570" --sdk_root=${ANDROID_SDK_ROOT}
       - name: Install NDK
-        run: echo "y" | sudo /usr/local/lib/android/sdk/tools/bin/sdkmanager --install "ndk;20.0.5594570" --sdk_root=${ANDROID_SDK_ROOT}
+        run: sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "ndk;20.0.5594570"
+
+#      - name: Install CMake 3.10
+#        run: echo "y" | sudo /usr/local/lib/android/sdk/tools/bin/sdkmanager --install "cmake;3.10.2.4988404" --sdk_root=${ANDROID_SDK_ROOT}
 
       - name: Build with Gradle
         run: ./gradlew build
