--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,19 +11,31 @@ jobs:
         os: [ubuntu-latest, macos-latest]
 
     steps:
+      - name: Git checkout
       - uses: actions/checkout@v2
+
       - name: set up JDK 1.8
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
 
-#      - name: Install NDK
-#        run: echo "y" | sudo /usr/local/lib/android/sdk/tools/bin/sdkmanager --install "ndk;20.0.5594570" --sdk_root=${ANDROID_SDK_ROOT}
       - name: Install NDK
         run: sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "ndk;20.0.5594570"
 
-#      - name: Install CMake 3.10
-#        run: echo "y" | sudo /usr/local/lib/android/sdk/tools/bin/sdkmanager --install "cmake;3.10.2.4988404" --sdk_root=${ANDROID_SDK_ROOT}
+      - name: Install CMake 3.10.2
+        run: sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "cmake;3.10.2.4988404"
+
+      - name: Cache Gradle Caches
+        uses: actions/cache@v1
+        with:
+          path: ~/.gradle/caches/
+          key: cache-gradle-cache
+
+      - name: Cache Gradle Wrapper
+        uses: actions/cache@v1
+        with:
+          path: ~/.gradle/wrapper/
+          key: cache-gradle-wrapper
 
       - name: Build with Gradle
         run: ./gradlew build
