--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,7 +12,7 @@ jobs:
 
     steps:
       - name: Git checkout
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
 
       - name: set up JDK 1.8
         uses: actions/setup-java@v1
