--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,10 +20,10 @@ jobs:
           java-version: 1.8
 
       - name: Install NDK
-        run: sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "ndk;20.0.5594570"
+        run: ${ANDROID_HOME}/tools/bin/sdkmanager --install "ndk;20.0.5594570"
 
       - name: Install CMake 3.10.2
-        run: sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "cmake;3.10.2.4988404"
+        run: ${ANDROID_HOME}/tools/bin/sdkmanager --install "cmake;3.10.2.4988404"
 
       - name: Cache Gradle Caches
         uses: actions/cache@v1
