--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -8,7 +8,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        # windows-latest
+        os: [ubuntu-latest, macos-latest]
 
     steps:
       - name: Git checkout
@@ -19,11 +20,14 @@ jobs:
         with:
           java-version: 1.8
 
+      # sudo is necessary for linux
+
+      # 20.0.5594570 is not used, but it needs to be installed
       - name: Install NDK
-        run: ${ANDROID_HOME}/tools/bin/sdkmanager --install "ndk;20.0.5594570"
+        run: sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "ndk;20.0.5594570"
 
       - name: Install CMake 3.10.2
-        run: ${ANDROID_HOME}/tools/bin/sdkmanager --install "cmake;3.10.2.4988404"
+        run: sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "cmake;3.10.2.4988404"
 
       - name: Cache Gradle Caches
         uses: actions/cache@v1
