--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,12 +1,17 @@
 name: Android CI
 on: [push, pull_request]
 
+env:
+  CMAKE_VERSION: "3.10.2.4988404"
+  NDK_VERSION: "20.0.5594570"
+
 jobs:
   build:
     name: ${{ matrix.config.name }}
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
+      # if we want that the matrix keeps running, default is to cancel if one of them fails.
+      # fail-fast: false
       matrix:
         # windows-latest
         os: [ubuntu-latest, macos-latest]
@@ -15,6 +20,7 @@ jobs:
       - name: Git checkout
         uses: actions/checkout@v2
 
+      # Zulu Community distribution of OpenJDK
       - name: set up JDK 1.8
         uses: actions/setup-java@v1
         with:
@@ -23,12 +29,12 @@ jobs:
       # sudo is necessary for linux
 
       # 20.0.5594570 is not used, but it needs to be installed
-      - name: Install NDK
-        run: sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "ndk;20.0.5594570"
+      - name: Install NDK 20.0
+        run: sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "ndk;${NDK_VERSION}"
 
-      # required because macos doesn't have cmake 3.10 installed by default
-      - name: Install CMake 3.10.2
-        run: sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "cmake;3.10.2.4988404"
+      # required because macOS doesn't have cmake 3.10 installed by default
+      - name: Install cmake 3.10.2
+        run: sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "cmake;${CMAKE_VERSION}"
 
       - name: Cache Gradle Caches
         uses: actions/cache@v1
@@ -42,6 +48,7 @@ jobs:
           path: ~/.gradle/wrapper/
           key: cache-gradle-wrapper
 
+      # so we don't care for ./gradlew or gradlew.bat
       - name: Run Gradle commands
         uses: eskatos/gradle-command-action@v1
         with:
