add windows build

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,4 +1,4 @@
-name: Android CI Linux/MacOS
+name: Android CI Windows
 on: [push, pull_request]
 
 env:
@@ -7,7 +7,13 @@ env:
 
 jobs:
   build:
-    runs-on: windows-latest
+    name: ${{ matrix.config.name }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      # if we want that the matrix keeps running, default is to cancel if one of them fails.
+      # fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-latest]
 
     steps:
       - name: Git checkout
@@ -18,6 +24,17 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+
+      # sudo is necessary for linux
+
+      # 20.0.5594570 is not used, but it needs to be installed
+      # https://github.com/actions/virtual-environments/issues/60
+      # - name: Install NDK 20.0
+      #  run: sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "ndk;${NDK_VERSION}"
+
+      # required because macOS doesn't have cmake 3.10 installed by default
+      - name: Install cmake 3.10.2
+        run: sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "cmake;${CMAKE_VERSION}"
 
       - name: Cache Gradle Caches
         uses: actions/cache@v1
