--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -20,7 +20,8 @@ jobs:
           java-version: 1.8
 
       - name: Install NDK 21.1
-        run: ${ANDROID_HOME}\\tools\\bin\\sdkmanager "ndk;${NDK_VERSION}"
+        run: %ANDROID_HOME%\tools\bin\sdkmanager "ndk;%NDK_VERSION%"
+        shell: cmd
 
       - name: Cache Gradle Caches
         uses: actions/cache@v1
