renaming cache keys

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -43,17 +43,20 @@ jobs:
       - name: Install cmake 3.10.2
         run: sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "cmake;${CMAKE_VERSION}"
 
+
+      # use sequential key when bumping dependencies till single lock file is out of preview
+      # https://docs.gradle.org/current/userguide/dependency_locking.html#single_lock_file_per_project
       - name: Cache Gradle Caches
         uses: actions/cache@v1
         with:
           path: ~/.gradle/caches/
-          key: cache-gradle-cache
+          key: cache-gradle-cache-2
 
       - name: Cache Gradle Wrapper
         uses: actions/cache@v1
         with:
           path: ~/.gradle/wrapper/
-          key: cache-gradle-wrapper
+          key: cache-gradle-wrapper-2
 
       # uses eskatos/gradle-command-action, so we don't care for ./gradlew or gradlew.bat
 
