--- a/sentry-sample/src/main/AndroidManifest.xml
+++ b/sentry-sample/src/main/AndroidManifest.xml
@@ -53,7 +53,7 @@
     <!--    <meta-data android:name="io.sentry.ndk.enable" android:value="false" />-->
 
     <!--    how to set a custom release-->
-    <!--    <meta-data android:name="io.sentry.release" android:value="io.sentry.sample@1.0.0+10001" />-->
+        <meta-data android:name="io.sentry.release" android:value="io.sentry.heyeieioia@1.0.0+10001" />
 
     <!--    how to enable automatic session tracking-->
     <meta-data android:name="io.sentry.session-tracking.enable" android:value="true" />
