--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   CMAKE_VERSION: "3.10.2.4988404"
-  # NDK_VERSION: "20.0.5594570"
+  NDK_VERSION: "21.0.6113669"
 
 jobs:
   build:
@@ -34,10 +34,10 @@ jobs:
 
       # sudo is necessary for linux
 
-      # 20.0.5594570 is not used, but it needs to be installed
       # https://github.com/actions/virtual-environments/issues/60
-      # - name: Install NDK 20.0
-      #  run: sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "ndk;${NDK_VERSION}"
+      # necessary for ubuntu build
+      - name: Install NDK 20.0
+        run: sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "ndk;${NDK_VERSION}"
 
       # required because macOS doesn't have cmake 3.10 installed by default
       - name: Install cmake 3.10.2
