--- a/.github/workflows/emulator-sample-install.yml
+++ b/.github/workflows/emulator-sample-install.yml
@@ -26,8 +26,9 @@ jobs:
 
       - name: set up sdkmanager and emulators
         uses: malinskiy/action-android/install-sdk@release/0.0.7
-      - run: adb devices
       - run: echo $ANDROID_HOME
+      - run: sdkmanager platform-tools
+      - run: adb devices
       - run: sdkmanager --install "cmake;${CMAKE_VERSION}"
 
       - uses: malinskiy/action-android/emulator-run-cmd@release/0.0.7
