--- a/.github/workflows/emulator-sample-install.yml
+++ b/.github/workflows/emulator-sample-install.yml
@@ -9,6 +9,7 @@ on:
 
 env:
   CMAKE_VERSION: "3.10.2.4988404"
+  NDK_VERSION: "21.0.6113669"
 
 jobs:
   build:
@@ -30,10 +31,11 @@ jobs:
       - run: sdkmanager platform-tools
       - run: adb devices
       - run: sdkmanager --install "cmake;${CMAKE_VERSION}"
+      - run: sdkmanager --install "ndk;${NDK_VERSION}"
 
       - uses: malinskiy/action-android/emulator-run-cmd@release/0.0.7
         with:
-          cmd: ./gradlew installDebug
+          cmd: ./gradlew installDebug && adb shell am start -n io.sentry.sample/io.sentry.sample.MainActivity
           api: 25
           tag: default
           abi: x86
