--- a/sentry-sample/src/main/AndroidManifest.xml
+++ b/sentry-sample/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
     <!--    <meta-data android:name="io.sentry.anr.report-debug" android:value="true" />-->
 
     <!--    how to disable ANR-->
-    <meta-data android:name="io.sentry.anr.enable" android:value="false" />
+    <!--    <meta-data android:name="io.sentry.anr.enable" android:value="false" />-->
 
     <!--    how to disable the auto-init-->
     <!--    <meta-data android:name="io.sentry.auto-init" android:value="false" />-->
@@ -60,7 +60,7 @@
     <!--    <meta-data android:name="io.sentry.release" android:value="io.sentry.sample@1.0.0+10001" />-->
 
     <!--    how to enable automatic session tracking-->
-    <meta-data android:name="io.sentry.session-tracking.enable" android:value="false" />
+    <meta-data android:name="io.sentry.session-tracking.enable" android:value="true" />
 
     <!--    how to set an environment-->
     <!--    <meta-data android:name="io.sentry.environment" android:value="debug" />-->
