--- a/sentry-samples/sentry-samples-spring/src/main/resources/application.properties
+++ b/sentry-samples/sentry-samples-spring/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 # NOTE: Replace the test DSN below with YOUR OWN DSN to see the events from this app in your Sentry project/dashboard
 sentry.dsn=https://f7f320d5c3a54709be7b28e0f2ca7081@sentry.io/1808954
 sentry.send-default-pii=true
+
+# Uncaught exception handler should be disabled if both Sentry Spring and Logback integrations are enabled
+sentry.enable-uncaught-exception-handler=false
