--- a/sentry-samples/sentry-samples-spring-boot/src/main/resources/application.properties
+++ b/sentry-samples/sentry-samples-spring-boot/src/main/resources/application.properties
@@ -4,3 +4,6 @@ sentry.send-default-pii=true
 # Sentry Spring Boot integration allows more fine-grained SentryOptions configuration
 sentry.max-breadcrumbs=10
 sentry.bypass-security=true
+
+# Uncaught exception handler should be disabled if both Sentry Spring and Logback integrations are enabled
+sentry.enable-uncaught-exception-handler=false
